<resources>
    <string name="app_name">WatchList</string>
    <string name="title_movies">Movies</string>
    <string name="title_watchlist">Watchlist</string>
    <string name="title_logbook">Logbook</string>
    <string name="login">Login</string>
    <string name="new_sign_up_now">New? Sign Up now!</string>
    <string name="sign_up">Sign Up</string>
    <string name="prompt_email">Enter your email</string>
    <string name="prompt_password">Enter your password</string>
    <string name="action_sign_in_short">Sign In</string>
    <string name="action_sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="movie_title">Movie Title</string>
    <string name="search">Search</string>
    <string name="rating_format">Rating: %s</string>
    <string name="rating_count_format">Rating Count: %s</string>
    <string name="review_movie">Review Movie</string>
    <string name="add_to_watchlist">Add to WatchList</string>
    <string name="refresh">Refresh</string>
    <string name="english_nederlands">English/Nederlands</string>
    <string name="login_failed">Login failed</string>
    <string name="try_again">Please try again.</string>
    <string name="ok">OK</string>
    <string name="empty_fields">Empty Fields</string>
    <string name="please_fill_in_all_the_fields">Please fill in all the fields.</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="please_enter_a_valid_email_address">Please enter a valid email address.</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="please_enter_a_password_with_at_least_6_characters">Please enter a password with at least 6 characters.</string>
    <string name="password_mismatch">Password Mismatch</string>
    <string name="the_entered_passwords_do_not_match_please_try_again">The entered passwords do not match. Please try again.</string>
    <string name="remove_from_watchlist">Remove from Watchlist</string>
    <string name="release_date">Release date: %s</string>
    <string name="loading">Loading…</string>
    <string name="runtime">Runtime: %s</string>
    <string name="go_back">Go back</string>
    <string name="a_score_from_0_to_10">A score from 0 to 10</string>
    <string name="write_a_review">Write a review</string>
    <string name="cancel">Cancel</string>
    <string name="_10">10</string>
    <string name="movie_info">Movie Information</string>
    <string name="your_score">Score: %1$s / 10</string>
    <string name="reviews">Reviews:</string>
</resources>